--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
             <version>8.0.19</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.12</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
